# myair-py

./: LICENSE  README.md  pyproject.toml
myair_py/: __init__.py
