[tool.poetry]
name = "myair-py"
version = "0.1.1"
description = "API Client to interact with ResMed MyAir CPAP data"
authors = ["Alex Silverman <alex@silverswatch.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyJWT = "^2.8.0"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
